# ZX2D80CE63S

./: .gitignore  CMakeLists.txt  partitions.csv  readme.md  readme_ch.md  sdkconfig  sdkconfig.defaults
doc/: ST7789V3-BOE2.83IPS(2.83  GV028QVQ-N81-3QP0-Q-)_Gamma2.2-2022.01.04.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  log.md  lvgl_demo_ui.c  main.c  qmsd_board_pin.h  rs485_demo.c  st7789_vendor.c  st7789_vendor.h
